<resources>
    <string name="app_name" translatable="false">FGO Planning Tool</string>
    <string name="app_repo" translatable="false">https://github.com/ssttkkl/FGO-Planning-Tool</string>

    <string name="resAbsent_splash">看上去您还没有加载资源包。您可以在进入APP后，到“选项”界面更新资源包。</string>
    <string name="resBroken_splash">资源包读取失败。可能是因为资源包和APP版本不匹配。您可以在进入APP后，到“选项”界面重新更新资源包。</string>
    <string name="enterApp_splash">进入APP</string>

    <string name="databaseFromMigrationName">从旧版本迁移的账号</string>
    <string name="newDatabaseName">新账号</string>
    <string name="newDatabaseNameMultiple">新账号 (%1$d)</string>

    <string name="openDrawer_main">打开侧边栏</string>
    <string name="closeDrawer_main">关闭侧边栏</string>
    <string name="backAgain_main">再按一次返回键退出应用</string>

    <string name="planlist_nav">规划列表</string>
    <string name="ownitemlist_nav">材料仓库</string>
    <string name="servantdetaillist_nav">灵基一览</string>
    <string name="preferences_nav">选项</string>
    <string name="databaseManage_nav">管理</string>

    <string name="title_databasemanage">管理账号</string>
    <string name="add_databasemanage">添加</string>
    <string name="rename_databasemanage">重命名</string>
    <string name="remove_databasemanage">删除</string>
    <string name="import_databasemanage">导入</string>
    <string name="export_databasemanage">导出</string>
    <string name="importSuccessful_databasemanage">导入成功</string>
    <string name="importError_databasemanage">导入失败：%1$s</string>
    <string name="exportSuccessful_databasemanage">导出成功</string>
    <string name="exportError_databasemanage">导出失败：%1$s</string>

    <string name="title_planlist">规划列表</string>
    <string name="emptyHint_planlist">现在这里什么都没有\n点击右上角 ＋ 按钮添加规划</string>
    <string name="emptyHint_notDefaultState_planlist">当前过滤条件下这里什么都没有\n点击右上角 ＋ 按钮添加规划</string>
    <string name="selectedCount_planlist" translatable="false">%1$d / %2$d</string>
    <string name="add_planlist">添加</string>
    <string name="enterSelectMode_planlist">进入多选模式</string>
    <string name="remove_planlist">删除</string>
    <string name="selectAll">选择全部</string>
    <string name="level_item_planlist">等级</string>
    <string name="skill1_item_planlist">技能 I</string>
    <string name="skill2_item_planlist">技能 II</string>
    <string name="skill3_item_planlist">技能 III</string>
    <string name="lv_planlist">Lv.%1$d %2$d/%3$d/%4$d</string>

    <string name="title_eventlist">未来活动</string>
    <string name="emptyHint_eventlist">现在这里什么都没有\n点击右上角 ＋ 按钮添加未来活动</string>

    <string-array name="tabTitles">
        <item>编辑规划</item>
        <item>消耗材料</item>
    </string-array>
    <string name="title_editplan_chooseservant">选择从者</string>
    <string name="title_new_editplan">新建规划</string>
    <string name="title_edit_editplan">编辑规划</string>
    <string name="save_editplan">保存</string>
    <string name="remove_editplan">删除</string>
    <string name="tab_edit_editplan">编辑</string>
    <string name="tab_items_editplan">消耗材料</string>
    <string name="ascendedInCurStage_editplan">当前阶段完成再临</string>
    <string name="remainedExp_editplan">升级剩余经验</string>
    <string name="max_editplan">再临MAX</string>
    <string name="mmax_editplan">圣杯MAX</string>
    <string name="dress_editplan">灵衣开放</string>
    <string-array name="skill_editplan">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="illegalRemainedExp_editplan_editlevel">“升级剩余经验”不能大于该等级升级需要的经验值</string>
    <string name="illegalLevel_editplan_editlevel">“等级”不能超出该角色的合法等级范围</string>

    <string name="title_servantbaselist">灵基一览</string>
    <string name="switchToGridView_servantlist">切换到网格视图</string>
    <string name="switchToListView_servantlist">切换到列表视图</string>
    <string name="sortAndFilter_servantlist">排序与过滤</string>
    <string name="search_servantlist">搜索</string>
    <string name="order_servantfilter">排序</string>
    <string-array name="order_servantfilter">
        <item>升序</item>
        <item>降序</item>
    </string-array>
    <string-array name="orderBy_servantfilter">
        <item>编号</item>
        <item>职介</item>
        <item>星级</item>
    </string-array>
    <string name="star_servantfilter">按星级过滤</string>
    <string name="class_servantfilter">按职介过滤</string>
    <string name="wayToGet_servantfilter">按获得方式过滤</string>
    <string name="item_servantfilter">按消耗材料过滤</string>
    <string name="add_item_servantfilter">添加</string>
    <string-array name="mode_item_servantfilter">
        <item>与</item>
        <item>或</item>
    </string-array>
    <string name="reset_servantfilter">重置</string>

    <string name="title_costitemlist">消耗材料</string>
    <string name="hide_enough_items_costitemlist">只显示不足项</string>
    <string name="jump_costitemlist">快速跳转</string>
    <string name="own_item_costitemlist">持有</string>
    <string name="ownAndEvent_item_costitemlist">持有+活动</string>
    <string name="need_item_costitemlist">需要</string>
    <string name="withEventItems_costitemlist">千里眼</string>
    <string name="emptyHint_costitemlist">这规划竟然不消耗任何材料</string>

    <string name="title_ownitemlist">材料仓库</string>
    <string name="enterEditMode_ownitemlist">进入批量编辑模式</string>
    <string name="own_item_ownitemlist">持有</string>

    <string name="hint_edititem">持有数量</string>
    <string name="save_edititem">保存</string>
    <string name="cancel_edititem">取消</string>
    <string name="illegalError_edititem">数据不合法</string>
    <string name="unknownError_edititem">未知错误</string>

    <string name="ascension_iteminfo">灵基再临</string>
    <string name="skill_iteminfo">技能升级</string>
    <string name="dress_iteminfo">灵衣开放</string>
    <string name="gotoWiki_iteminfo">跳转到 Wiki</string>

    <string-array name="itemType">
        <item>通用</item>
        <item>技能石</item>
        <item>铜素材</item>
        <item>银素材</item>
        <item>金素材</item>
        <item>棋子</item>
        <item>活动英灵再临素材</item>
    </string-array>

    <string-array name="wayToGet">
        <item>初始获得</item>
        <item>常驻</item>
        <item>限定</item>
        <item>剧情池限定</item>
        <item>活动赠送</item>
    </string-array>

    <string name="deductItems_changeplanwarning">扣除消耗的材料</string>
    <string name="viewItems_changeplanwarning">查看</string>
    <string name="remove_changeplanwarning">删除</string>
    <string name="edit_changeplanwarning">编辑</string>
    <string name="cancel_changeplanwarning">取消</string>

    <string name="gotoWiki_servantinfo">去 Wiki (%1$s) 查阅资料</string>

    <string name="title_pref">选项</string>
    <string name="group_display">显示</string>
    <string name="title_nameLanguage">从者、材料名称显示语言</string>
    <string-array name="entities_nameLanguage">
        <item>简体中文</item>
        <item>日本語</item>
        <item>English</item>
    </string-array>
    <string-array name="entityValues_nameLanguage">
        <item>zh</item>
        <item>ja</item>
        <item>en</item>
    </string-array>
    <string name="title_unlockRealName_pref">真名解放</string>
    <string name="summary_unlockRealName_pref">解放在 Epic of Remnant 中登场的某些隐藏真名的从者的真名</string>
    <string name="group_res_pref">资源包</string>
    <string name="title_curResPackVersion_pref">当前资源包版本</string>
    <string name="summary_curResPackVersion_pref">%1$s（%2$d）</string>
    <string name="summary_curResPackVersion_broken_pref">%1$s（%2$d）（资源包不完整，请尝试更新资源包）</string>
    <string name="summary_curResPackVersion_highTargetVersion_pref">%1$s（%2$d）（目标APP版本高于当前APP版本，请尝试更新APP）</string>
    <string name="summary_curResPackVersion_lowTargetVersion_pref">%1$s（%2$d）（当前APP版本高于目标APP版本，请尝试更新资源包）</string>
    <string name="summary_curResPackVersion_absent_pref">（当前还没有加载资源包，请尝试更新资源包）</string>
    <string name="title_checkUpdateOnStart_pref">启动时检查更新</string>
    <string name="title_autoUpdateResPack_pref">自动更新资源包</string>
    <string name="summary_autoUpdateResPack_pref">可能会耗费2~4M流量</string>
    <string name="title_manuallyUpdateResPack_pref">手动更新资源包</string>
    <string name="summary_manuallyUpdateResPack_pref">请参阅下面的帮助</string>
    <string name="title_helpResPack_pref">资源包相关帮助</string>
    <string name="summary_helpResPack_pref">什么是资源包？如何手动更新资源包？</string>
    <string name="getResLink_pref">https://github.com/ssttkkl/FGO-Planning-Tool/wiki/%E8%B5%84%E6%BA%90%E5%8C%85</string>
    <string name="version_pref">版本号</string>
    <string name="repo_pref">Github 项目主页</string>
    <string name="removeResPack_hint">是否要删除已经加载的资源包？</string>
    <string name="removeResPack_yes">是</string>

    <string name="title_updaterespack">更新资源包</string>
    <string name="releaseDate_updaterespack">发布日期</string>
    <string name="releaseDate_pattern_updaterespack">%1$d/%2$d/%3$d</string>
    <string name="content_updaterespack">内容进度</string>
    <string name="size_updaterespack">文件大小</string>
    <string name="size_pattern_updaterespack">%1$.2fMB</string>
    <string name="status_updaterespack">状态</string>
    <string name="status_loading_updaterespack">查询更新中……</string>
    <string name="status_loadSuccessful_updaterespack">查询更新成功</string>
    <string name="status_loadFailed_updaterespack">查询更新失败</string>
    <string name="status_downloading_updaterespack">下载中……</string>
    <string name="status_downloadFailed_updaterespack">下载失败</string>
    <string name="status_updating_updaterespack">更新中……</string>
    <string name="status_updateFailed_updaterespack">更新失败</string>
    <string name="status_updateSuccessful_updaterespack">更新成功</string>

    <string name="channel_updateNotification_checkupdare">更新提醒</string>
    <string name="resPackUpdateAvailable_checkupdate">资源包更新可用</string>
    <string name="appUpdateAvailable_checkupdate">APP更新可用</string>

    <string name="exc_lowTargetVersion_resUpdater">资源包的目标APP版本小于当前APP版本。请下载最新资源包。</string>
    <string name="exc_highTargetVersion_resUpdater">资源包的目标APP版本大于当前APP版本。请先升级APP。</string>
    <string name="exc_fileNotExists_resUpdater">文件 %1$s 不存在。</string>
    <string name="exc_dirNotExists_resUpdater">目录 %1$s 不存在。</string>
    <string name="exc_isNotDir_resUpdater">%1$s 不是一个目录。</string>
    <string name="exc_isNotFile_resUpdater">%1$s 不是一个文件。</string>
    <string name="exc_outOfBounds_edititem">值必须在 %1$d~%2$d 范围之内。</string>
    <string name="exc_fileFormatError_planGsonTypeAdapter">文件格式错误。</string>
    <string name="title_editplan_chooseservantlist">选择从者</string>
    <string name="title_confirm_change_plan">确认更改</string>
    <string name="title_confirm_remove_plan">确认删除</string>
    <string name="hint_confirm_change_plan">将会从仓库一并扣除相应数量的选中的材料。</string>

    <string name="maxcount_editevent">最多 %1$d 个</string>
    <string name="title_chooseevent">选择活动</string>
    <string name="shop_editevent">商店</string>
    <string name="lottery_editevent">无限池</string>
    <string name="planBoxCount_editevent">计划池数</string>
    <string name="storyGift_editevent">剧情/周回首通奖励</string>
    <string name="title_editevent">编辑活动</string>
    <string name="selectAll_editevent">全选</string>
    <string name="deselectAll_editevent">全不选</string>
    <string name="reset_editevent">重置</string>
    <string name="illegalValue_editevent">材料 %1$s 的数量超出范围 [%2$d, %3$d]</string>
    <string name="participated_editevent">参加过原版活动</string>
    <string name="event_ownitemlist">活动</string>
    <string name="emptyHint_editevent">这里什么都没有</string>
</resources>
