<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/planListFragment"
            android:icon="@drawable/ic_flag_white_24dp"
            android:title="@string/planlist_nav"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/ownItemListFragment"
            android:icon="@drawable/ic_storage_white_24dp"
            android:title="@string/ownitemlist_nav"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/servantBaseListFragment"
            android:icon="@drawable/ic_album_white_24dp"
            android:title="@string/servantdetaillist_nav"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settingsActivity"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/preferences_nav"
            app:showAsAction="ifRoom" />
    </group>
</menu>
