<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.ssttkkl.fgoplanningtool.data.item.ItemKt" />

        <import type="com.ssttkkl.fgoplanningtool.ui.eventlist.editevent.CheckableItemKt" />

        <variable
            name="viewModel"
            type="com.ssttkkl.fgoplanningtool.ui.eventlist.editevent.EditNormalEventFragmentViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{viewModel.event.originEvent.descriptor.localizedName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="Event" />

            <CheckBox
                android:id="@+id/participated_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:checked="@={viewModel.event.rerunAndParticipated}"
                android:text="@string/participated_editevent"
                android:visibility="@{viewModel.event.originEvent.descriptor.isRerun ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/shopHeader_textView"
                rotateDrawableEnd="@{viewModel.shopExpanded}"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/rotate_arrow"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="@{(v) -> viewModel.onClickHeader(v)}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/shop_editevent"
                android:textAppearance="@style/SubHeader" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_expanded="@{viewModel.shopExpanded}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/selectAll_Button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> viewModel.onClickSelectAllShopItems()}"
                        android:text="@string/selectAll_editevent"
                        app:layout_constraintEnd_toStartOf="@id/deselectAll_Button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/deselectAll_Button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> viewModel.onClickDeselectAllShopItems()}"
                        android:text="@string/deselectAll_editevent"
                        app:layout_constraintEnd_toStartOf="@id/reset_Button"
                        app:layout_constraintStart_toEndOf="@id/selectAll_Button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/reset_Button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> viewModel.onClickResetShopItems()}"
                        android:text="@string/reset_editevent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/deselectAll_Button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_recView"
                        list="@{CheckableItemKt.sorted(viewModel.event.checkedShopItems)}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/selectAll_Button"
                        tools:listitem="@layout/item_editevent_checkableitem" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>

            <TextView
                android:id="@+id/storyHeader_textView"
                rotateDrawableEnd="@{viewModel.storyExpanded}"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/rotate_arrow"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="@{(v) -> viewModel.onClickHeader(v)}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/storyGift_editevent"
                android:textAppearance="@style/SubHeader" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:el_expanded="@{viewModel.storyExpanded}">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/storyGift_recView"
                    list="@{ItemKt.sorted(viewModel.event.originEvent.storyItems)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_editevent" />
            </net.cachapa.expandablelayout.ExpandableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>